k8s/projects/nginx/ingress-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-service
  namespace: nginx-test-zone
spec:
  ports:
    - port: 8081
      targetPort: 81
  selector:
    app: nginx
  type: ClusterIP
