k8s/projects/nginx/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: nginx
  type: LoadBalancer
